--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-title" content="certempiree">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="icon" type="image/png" href="assets/icons/CertEmpirefavicon.png" />
 
   <title>certempiree</title>
   <link rel="manifest" href="manifest.json">
